Startup & Appsetting for ConnectionnString

--- a/LampShade/ServiceHost/appsettings.Development.json
+++ b/LampShade/ServiceHost/appsettings.Development.json
@@ -6,5 +6,9 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    
+    "LampShadeDb": "Data Source=ITADMIN\\SA;Initial Catalog=LampShade;User ID=sa;Password=TeslaTesla"
   }
 }
