--- a/LampShade/ServiceHost/Properties/launchSettings.json
+++ b/LampShade/ServiceHost/Properties/launchSettings.json
@@ -19,7 +19,8 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "https://localhost:1369;http://localhost:1370",
+      "launchUrl": "Administration/Shop/ProductCategories",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
