--- a/LampShade/ServiceHost/Properties/launchSettings.json
+++ b/LampShade/ServiceHost/Properties/launchSettings.json
@@ -18,7 +18,7 @@
     "ServiceHost": {
       "commandName": "Project",
       "dotnetRunMessages": "true",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:1369;http://localhost:1370",
       //"launchUrl": "administration/Shop/ProductCategories",
       "environmentVariables": {
