--- a/LampShade/DiscountMangement.Domain/DiscountMangement.Domain.csproj
+++ b/LampShade/DiscountMangement.Domain/DiscountMangement.Domain.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\0_Framework\0_Framework.csproj" />
+  </ItemGroup>
+
 </Project>
