--- a/LampShade/ServiceHost/ServiceHost.csproj
+++ b/LampShade/ServiceHost/ServiceHost.csproj
@@ -12,6 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DiscountManagement.Configuration\DiscountManagement.Configuration.csproj" />
     <ProjectReference Include="..\ShopMangement.Configuration\ShopManagement.Configuration.csproj" />
   </ItemGroup>
 
