--- a/LampShade/DiscountManagement.Application.Contract/DiscountManagement.Application.Contract.csproj
+++ b/LampShade/DiscountManagement.Application.Contract/DiscountManagement.Application.Contract.csproj
@@ -5,7 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.ViewFeatures" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\0_Framework\0_Framework.csproj" />
+    <ProjectReference Include="..\ShopMamagement.Application.Contract\ShopManagement.Application.Contract.csproj" />
   </ItemGroup>
 
 </Project>
