مرحله پنچم پیاره سازی ColleagueDiscountApplication

--- a/LampShade/DiscountMangement.Application/DiscountManagement.Application.csproj
+++ b/LampShade/DiscountMangement.Application/DiscountManagement.Application.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DiscountManagement.Application.Contract\DiscountManagement.Application.Contract.csproj" />
+    <ProjectReference Include="..\DiscountManagement.Infrastructure.EFCore\DiscountManagement.Infrastructure.EFCore.csproj" />
     <ProjectReference Include="..\DiscountMangement.Domain\DiscountMangement.Domain.csproj" />
   </ItemGroup>
 
