--- a/LampShade/InventoryManagement.Infrastructure.EFCore/InventoryManagement.Infrastructure.EFCore.csproj
+++ b/LampShade/InventoryManagement.Infrastructure.EFCore/InventoryManagement.Infrastructure.EFCore.csproj
@@ -13,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\InventoryManagement.Domain\InventoryManagement.Domain.csproj" />
+    <ProjectReference Include="..\ShopManagement.Infrastructure.EFCore\ShopManagement.Infrastructure.EFCore.csproj" />
   </ItemGroup>
 </Project>
