--- a/LampShade/InventoryManagement.Configuration/InventoryManagement.Configuration.csproj
+++ b/LampShade/InventoryManagement.Configuration/InventoryManagement.Configuration.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\InventoryManagement.Applicataion\InventoryManagement.Applicataion.csproj" />
     <ProjectReference Include="..\InventoryManagement.Domain\InventoryManagement.Domain.csproj" />
     <ProjectReference Include="..\InventoryManagement.Infrastructure.EFCore\InventoryManagement.Infrastructure.EFCore.csproj" />
   </ItemGroup>
