--- a/LampShade/01_LampSahdeQuery/01_LampShadeQuery.csproj
+++ b/LampShade/01_LampSahdeQuery/01_LampShadeQuery.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>_01_LampSahdeQuery</RootNamespace>
+    <RootNamespace>_01_LampShadeQuery</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
