ایجاد تکست ادیتور ابتدا در سایت زیر ثبت نام می کنیم https://www.tiny.cloud/ بعد از ثبت نام بک Tiny API Key در قسمت داشبورد به ما میده که نحوه استفده از آن هم مشحصه   <script src="https://cdn.tiny.cloud/1/vz9p79f9kgu1dasq0269ociv23vs5a0lvub0qq3905ztwecx/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script> که اسکریین و ا« کی مربوط به شما مشحصه و <script>     tinymce.init({       selector: 'textarea',       plugins: 'a11ychecker advcode casechange export formatpainter image editimage linkchecker autolink lists checklist media mediaembed pageembed permanentpen powerpaste table advtable tableofcontents tinycomments tinymcespellchecker',       toolbar: 'a11ycheck addcomment showcomments casechange checklist code export formatpainter image editimage pageembed permanentpen table tableofcontents',       toolbar_mode: 'floating',       tinycomments_mode: 'embedded',       tinycomments_author: 'Author name',     });   </script> این موارد در آخر ادمین لیوت اضافه شود هم خود آن ادیتوره هست یادمان باشد هرگاه خواستیم از آن استفاده بکنیم باید در قسمت Approved Domains آدرس سایت مورد استقاده رو بزاریم

--- a/LampShade/ServiceHost/appsettings.Development.json
+++ b/LampShade/ServiceHost/appsettings.Development.json
@@ -9,6 +9,6 @@
   },
   "ConnectionStrings": {
     
-    "LampShadeDb": "Data Source=ITADMIN\\SA;Initial Catalog=LampShade;User ID=sa;Password=TeslaTesla"
+    "LampShadeDb": "Data Source=ADMINIT\\SA;Initial Catalog=LampShade;User ID=sa;Password=TeslaTesla"
   }
 }
