--- a/LampShade/BlogMangement.Infrastructure.Configuration/BlogManagement.Infrastructure.Configuration.csproj
+++ b/LampShade/BlogMangement.Infrastructure.Configuration/BlogManagement.Infrastructure.Configuration.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\01_LampSahdeQuery\01_LampShadeQuery.csproj" />
     <ProjectReference Include="..\BlogManagement.Application\BlogManagement.Application.csproj" />
     <ProjectReference Include="..\BlogManagement.Domain\BlogManagement.Domain.csproj" />
     <ProjectReference Include="..\BlogManagement.Infrastructure.Efcore\BlogManagement.Infrastructure.Efcore.csproj" />
