--- a/LampShade/AccountManagement.Infrastructure.EFCore/AccountManagement.Infrastructure.EFCore.csproj
+++ b/LampShade/AccountManagement.Infrastructure.EFCore/AccountManagement.Infrastructure.EFCore.csproj
@@ -14,4 +14,7 @@
   <ItemGroup>
     <ProjectReference Include="..\AccountManagement.Domain\AccountManagement.Domain.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
 </Project>
