تا پایان جلسه 13 پارت دوم از آموزشات 21
فایلی به نام codeGenerator که یک کد شش رقمی برای ما درست میکنه این کد که برای پیگری به درد می خوده این فایل در داخل Framwork قرار می گیره
برای مرحله پرداخت دیکه از کوکی برای واکشی اطلاعات استفاده نمی کنیم چون قابل دستکاری و میشه تغییرش داد برای اینکار از pattern به نام singleton استفاده میکنیم تا مادامی که اپلیکیشن در حال اجرا باشه مقادیر رو داره برای این کار یک کلاس یه نام ICartService ' داخل شاپ منیجمنت کانترکت  و درون order  می سازیم/ ,و پیاده سازی اونو داخل اپلیکیشن انجام میدیم.
نکته برای وایراپ کردن اون نکته این که در قسمت ShopManagementBootstrapper به جای services.AddTransient
از singletone استفادهمیکنم

 services.AddSingleton<ICartService, CartService>();
و برای ست کردن آن در رویداد گت مربوط به چک اوت می گیم ست کنه اونو.

--- a/LampShade/ServiceHost/Properties/launchSettings.json
+++ b/LampShade/ServiceHost/Properties/launchSettings.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "iisSettings": {
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
@@ -17,13 +17,11 @@
     },
     "ServiceHost": {
       "commandName": "Project",
-      "dotnetRunMessages": "true",
-      "launchBrowser": false,
-      "applicationUrl": "https://localhost:1369;http://localhost:1370",
-      //"launchUrl": "administration/Shop/ProductCategories",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "dotnetRunMessages": "true",
+      "applicationUrl": "https://localhost:1369;http://localhost:1370"
     }
   }
 }
