بروزرسانی انبار زمانی که سفارش ثبت میشه ارتباط بین Order و inventory زمانی که کاربر سفارشی ثبت میکنه باید از تعداد کم بشه که برای این   کار باید یک ارتباط از order به inventory داشته باشیم که در واقع باید در order اونو صداد بزنیم ولی اگه این کارو انجام بدیم باعث میشه که وابستگی بین  ماژول سفارشات و انبار داری به وجود بیاد بنابر این داخل order یک کلاس لایبرری ایجاد می کنیم و وابستگی رو از آن طریق ایجاد می کنیم
برای اینکه از این وابستگی جلوگیری کنیم استفاده از روش ACL (Anti Coruption Layer) با این روش ی لایه اضافه می سازیم برای اینکه بین اوردر و اینونتوری واسط بشه تا مشکل وابستگی حل بشه این لایه داخل دامین order اونو IShopInventoryAcl می سازیم و پیاده سازی آن به صورت یک کلاس لایبرری مجزا می باشد که داخل infrastructur می باشد.

بعد از تغیییرات آن می توان داخل OrderApplication این کلاس IinventortyAcl رو فراخوانی کرد و از وابستگی بین  order , Inventory جلوگیری کرد

--- a/LampShade/ShopMangement.Configuration/ShopManagement.Configuration.csproj
+++ b/LampShade/ShopMangement.Configuration/ShopManagement.Configuration.csproj
@@ -19,6 +19,7 @@
     <ProjectReference Include="..\ShopMamagement.Application.Contract\ShopManagement.Application.Contract.csproj" />
     <ProjectReference Include="..\ShopManagement.Infrastructure.EFCore\ShopManagement.Infrastructure.EFCore.csproj" />
     <ProjectReference Include="..\ShopMangement.Application\ShopManagement.Application.csproj" />
+    <ProjectReference Include="..\ShopMangement.Infrastructure.InventoryAcl\ShopManagement.Infrastructure.InventoryAcl.csproj" />
   </ItemGroup>
 
 </Project>
