************** 1)بهتره که هر Api داخل خود هر ماژول باشه و در داخل serviceHost کار درستی نیست . این کار کار بسیار بهتری است که به  او ن BestPractice گویند. مثلا اگه ماژول shop رو فرض کنیم یک فولدر به نام SM.Presentation  داریم که یک کلاس لایبرری به نام  ShopManagement.Presentation .Api ساخته میشه . و در واقع برای همه ماژول ها باید این کار رو انجام بدیم که معماری پیازی رو کامل رعایت کرده باشینم ************** یا این کار دیگه اپلیکیشن ما اون کنترلر ها رو نمیبینه و اونا رو پیدا نمی کنه که بایدکاری کنیم که اونا رو پیدا کنه برای این که باید داخل سرویس هاست اونا رو داشته باشیم اگه ما سرویس هاست نداشته باشیم  میتونیم از AppicationHost استفاده کنیم
حالا که که دایم داخل در قسمت اگه ریزور پیج داشتیم به اون اگه ام وی سی داشتیم به اون اضافه می کنیم   .AddApplicationPart(typeof(ProductController).Assembly) برای هر کنترلر جدا بادی اضافه کرد

services.AddRazorPages()
                .AddMvcOptions(options=>options.Filters.Add<SecurityPageFilter>())
                .AddRazorPagesOptions(option=>
                {
                    option.Conventions.AuthorizeAreaFolder("Administration", "/", "AdminArea");
                    option.Conventions.AuthorizeAreaFolder("Administration", "/Shop", "Shop");
                    option.Conventions.AuthorizeAreaFolder("Administration", "/Discounts", "Discount");
                    option.Conventions.AuthorizeAreaFolder("Administration", "/Accounts", "Account");

                })
                .AddApplicationPart(typeof(ProductController).Assembly)
                .AddApplicationPart(typeof(InventoryController).Assembly);

______________با این کار اونا رو به سرویس هاست ادد کردیم و سرویس هاست اونا رو میشناسه دیگه

2)شاید بخواهیم که همه api ها رو به سرویس هاست اضافه نکنیم و اونا رو داخل یک api جدا گانه داشته باشیم که این کار رو هم می تونیم انجام بدیم
فرض کنید یخواهیم برای بلاگ این کار رو انجام بدهیم مثل قبل پوشه BM.Presentation رو می سازیم و به جای کلاس لایبرری حالا یک Asp .Net Core Web API ایجاد می کنیم که باید حتما از نوع Api Applivation 

--- a/LampShade/ServiceHost/ServiceHost.csproj
+++ b/LampShade/ServiceHost/ServiceHost.csproj
@@ -17,7 +17,9 @@
     <ProjectReference Include="..\CommentManagement.Configuration\CommentManagement.Configuration.csproj" />
     <ProjectReference Include="..\DiscountManagement.Configuration\DiscountManagement.Configuration.csproj" />
     <ProjectReference Include="..\InventoryManagement.Configuration\InventoryManagement.Configuration.csproj" />
+    <ProjectReference Include="..\InventoryManagement.Presentation.Api\InventoryManagement.Presentation.Api.csproj" />
     <ProjectReference Include="..\MenuManagement.Configuration\MenuManagement.Configuration.csproj" />
+    <ProjectReference Include="..\ShopManagement.Presentation.Api\ShopManagement.Presentation.Api.csproj" />
     <ProjectReference Include="..\ShopMangement.Configuration\ShopManagement.Configuration.csproj" />
   </ItemGroup>
 
