--- a/LampShade/BlogManagement.Presentation.Api/Properties/launchSettings.json
+++ b/LampShade/BlogManagement.Presentation.Api/Properties/launchSettings.json
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "dotnetRunMessages": "true",
       "launchBrowser": true,
-      "launchUrl": "swagger",
+      "launchUrl": "Blogger Api",
       "applicationUrl": "https://localhost:1371;http://localhost:1372",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
