--- a/LampShade/InventoryManagement.Presentation.Api/InventoryManagement.Presentation.Api.csproj
+++ b/LampShade/InventoryManagement.Presentation.Api/InventoryManagement.Presentation.Api.csproj
@@ -9,6 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\01_LampSahdeQuery\01_LampShadeQuery.csproj" />
     <ProjectReference Include="..\InventoryManagement.Application.Contract\InventoryManagement.Application.Contract.csproj" />
   </ItemGroup>
 
